fix hero slide images scaling on mobile

--- a/src/assets/styles/pages/_homepage.scss
+++ b/src/assets/styles/pages/_homepage.scss
@@ -16,6 +16,7 @@
 
     img {
       @include sp {
+        height: 100%;
         object-position: 20% 50%;
       }
     }
